--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -1,3 +1,15 @@
 <h1>Workout Table</h1>
-<p>{{results}}</p>
+<p>Here we go!</p>
+
+<table>
+	<tr>
+		<th>ID</th>
+		<th>Name</th>
+		<th>Reps</th>
+		<th>Weight</th>
+		<th>Date</th>
+		<th>LBs</th>
+	</tr>
+
+</table>
 
