--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -10,6 +10,14 @@
 		<th>Date</th>
 		<th>LBs</th>
 	</tr>
+	{{#each dArray}}
+		<th>this.id</th>
+		<th>this.name</th>
+		<th>this.reps</th>
+		<th>this.weight</th>
+		<th>this.date</th>
+		<th>this.lbs</th>
+	{{/each}}
 
 </table>
 
