--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -11,12 +11,12 @@
 		<th>LBs</th>
 	</tr>
 	{{#each dArray}}
-		<th>this.id</th>
-		<th>this.name</th>
-		<th>this.reps</th>
-		<th>this.weight</th>
-		<th>this.date</th>
-		<th>this.lbs</th>
+		<th>{{this.id}}</th>
+		<th>{{this.name}}</th>
+		<th>{{this.reps}}</th>
+		<th>{{this.weight}}</th>
+		<th>{{this.date}}</th>
+		<th>{{this.lbs}}</th>
 	{{/each}}
 
 </table>
