--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -11,12 +11,14 @@
 		<th>LBs</th>
 	</tr>
 	{{#each dArray}}
-		<th>{{this.id}}</th>
-		<th>{{this.name}}</th>
-		<th>{{this.reps}}</th>
-		<th>{{this.weight}}</th>
-		<th>{{this.date}}</th>
-		<th>{{this.lbs}}</th>
+		<tr>
+			<td>{{this.id}}</td>
+			<td>{{this.name}}</td>
+			<td>{{this.reps}}</td>
+			<td>{{this.weight}}</td>
+			<td>{{this.date}}</td>
+			<td>{{this.lbs}}</td>
+		</tr>
 	{{/each}}
 
 </table>
