--- a/views/data.handlebars
+++ b/views/data.handlebars
@@ -12,12 +12,12 @@
 	</tr>
 	{{#each dArray}}
 		<tr>
-			<td>{{this.id}}</td>
-			<td>{{this.name}}</td>
-			<td>{{this.reps}}</td>
-			<td>{{this.weight}}</td>
-			<td>{{this.date}}</td>
-			<td>{{this.lbs}}</td>
+			<td class="myTable">{{this.id}}</td>
+			<td class="myTable">{{this.name}}</td>
+			<td class="myTable">{{this.reps}}</td>
+			<td class="myTable">{{this.weight}}</td>
+			<td class="myTable">{{this.date}}</td>
+			<td class="myTable">{{this.lbs}}</td>
 		</tr>
 	{{/each}}
 
