--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -14,7 +14,8 @@
 		<tr>
 		
 			<form action="/delete" method="get">
-				<input type="hidden" name="id" value="3">
+				
+				<input type="text" name="id">
 		
 				<td class="myTable">{{this.id}}</td>
 				<td class="myTable">{{this.name}}</td>
