--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -15,7 +15,7 @@
 		
 			<form action="/delete" method="get">
 				
-				<input type="text" name="id">
+				<td><input type="text" name="id" value={{this.id}}></td>
 		
 				<td class="myTable">{{this.id}}</td>
 				<td class="myTable">{{this.name}}</td>
