--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -9,16 +9,19 @@
 		<th>Weight</th>
 		<th>Date</th>
 		<th>LBs</th>
+		<th>Action1</th>
+		<th>Action2</th>
 	</tr>
 	
 	<tr>
 		<form action="/addrow" method="get">
-			<td class="myTable"><input type="text" name="id"></td>
-			<td class="myTable"><input type="text" name="name" required></td>
-			<td class="myTable"><input type="number" name="reps"></td>
-			<td class="myTable"><input type="number" name="weight"></td>
-			<td class="myTable"><input type="number" name="date"></td>
-			<td class="myTable"><input type="checkbox" name="lbs"></td>
+			<td ><input type="text" name="id"></td>
+			<td ><input type="text" name="name" required></td>
+			<td ><input type="number" name="reps"></td>
+			<td ><input type="number" name="weight"></td>
+			<td ><input type="date" name="date"></td>
+			<td ><input type="checkbox" name="lbs"></td>
+			<td><input type="submit" value="Add Row"/></td>
 		</form>
 	</tr>
 	
