--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -18,7 +18,7 @@
 			<td ><input type="number" name="reps"></td>
 			<td ><input type="number" name="weight"></td>
 			<td ><input type="date" name="date"></td>
-			<td ><input type="checkbox" name="lbs"></td>
+			<td ><input type="checkbox" name="lbs" value=0></td>
 			<td><input type="submit" value="Add Row"/></td>
 		</form>
 	</tr>
