--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -18,7 +18,10 @@
 			<td ><input type="number" name="reps"></td>
 			<td ><input type="number" name="weight"></td>
 			<td ><input type="date" name="date"></td>
-			<td ><input type="checkbox" name="lbs" value=0></td>
+			<td >
+				<input type="hidden" name="lbs" value=0>
+				<input type="checkbox" name="lbs" value=1 checked>
+			</td>
 			<td><input type="submit" value="Add Row"/></td>
 		</form>
 	</tr>
