--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -45,7 +45,7 @@
 				<td class="myTable">{{this.weight}}</td>
 				<td class="myTable">{{this.date}}</td>
 				<td class="myTable">{{this.lbs}}</td>
-				<td class="myTable">{{this.lbs}}</td>
+				<td class="myTable">{{this.lbs*-1}}</td>
 				
 				<form action="/delete" method="get">
 					<input type="hidden" name="id" value={{this.id}}>
