--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -41,7 +41,7 @@
 			</form>
 			
 			<!-- Edit Button -->
-			<form action="/edit" method="get">
+			<form action="/delete" method="get">
 				<input type="hidden" name="id" value={{this.id}}>
 				<td><input type="submit" value="Edit"/></td>
 			</form>
