--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -27,11 +27,11 @@
 	
 
 	<tr>
-		<td class="myTable">{{name}}</td>
-		<td class="myTable">{{reps}}</td>
-		<td class="myTable">{{weight}}</td>
-		<td class="myTable">{{date}}</td>
-		<td class="myTable">{{lbs}}</td>
+		<td class="myTable">{{rowToEdit.name}}</td>
+		<td class="myTable">{{rowToEdit.reps}}</td>
+		<td class="myTable">{{rowToEdit.weight}}</td>
+		<td class="myTable">{{rowToEdit.date}}</td>
+		<td class="myTable">{{rowToEdit.lbs}}</td>
 	</tr>
 
 
