--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -16,12 +16,16 @@
 	<!-- ADD NEW DATA ROW -->
 	<tr>
 		<form action="/update" method="get">
+			
 			<td><input type="text" name="name" required value={{rowToEdit.name}}></td>
 			<td><input type="number" name="reps" value={{rowToEdit.reps}}></td>
 			<td><input type="number" name="weight" value={{rowToEdit.weight}}></td>
 			<td><input type="date" name="date" value={{rowToEdit.date}}></td>
 			<td><input type="number" name="lbs" min="0" max="1" value={{rowToEdit.lbs}}></td>
-			<td colspan="2"><input type="submit" value="Update"/></td>
+			<td>
+				<input type="hidden" name="id" value={{rowToEdit.id}}>
+				<input type="submit" value="Update"/>
+			</td>
 		</form>
 	</tr>
 	
