--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
 <head>
-	<title>Databayyyyse</title>
+	<title>DB Interaction</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<h3>Gunnar Martin</h3>
+	<h3>CS290</h3>
+	<h3>Winter 2015</h3>
+	<h3>DB Interactions</h3>
 	{{{body}}}
 </body>
 </html>
