--- a/views/update.handlebars
+++ b/views/update.handlebars
@@ -1,10 +1,10 @@
-<h1>Update Record</h1>
-
+<h1>Update this Record</h1>
 
 <table class="myTable">
 
 	<!-- HEADER ROW -->
 	<tr>
+		<th>Version</th>
 		<th>Name</th>
 		<th>Reps</th>
 		<th>Weight</th>
@@ -13,10 +13,10 @@
 		<th>Action</th>
 	</tr>
 	
-	<!-- ADD NEW DATA ROW -->
+	<!-- Update Record -->
 	<tr>
 		<form action="/update" method="get">
-			
+			<td class="myTable">Updated</td>
 			<td><input type="text" name="name" required value={{rowToEdit.name}}></td>
 			<td><input type="number" name="reps" value={{rowToEdit.reps}}></td>
 			<td><input type="number" name="weight" value={{rowToEdit.weight}}></td>
@@ -29,8 +29,9 @@
 		</form>
 	</tr>
 	
-
+	<!-- Original Record -->
 	<tr>
+		<td class="myTable">Original</td>
 		<td class="myTable">{{rowToEdit.name}}</td>
 		<td class="myTable">{{rowToEdit.reps}}</td>
 		<td class="myTable">{{rowToEdit.weight}}</td>
