--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,10 +5,8 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h3>Gunnar Martin</h3>
-	<h3>CS290</h3>
-	<h3>Winter 2015</h3>
-	<h3>DB Interactions</h3>
+	<h3>Gunnar Martin - CS290 - Winter 2015</h3>
+	<h3>Assignment: DB Interactions</h3>
 	{{{body}}}
 </body>
 </html>
