--- a/views/form.handlebars
+++ b/views/form.handlebars
@@ -26,7 +26,7 @@
 	
 	<!-- THE DATA TABLE -->
 	{{#each dArray}}
-		<tr id="trow"+{{this.id}}>
+		<tr id="row_{{this.id}}">
 			<td class="myTable">{{this.name}}</td>
 			<td class="myTable">{{this.reps}}</td>
 			<td class="myTable">{{this.weight}}</td>
