--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,12 @@
 <head>
 	<title>DB Interaction</title>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 <body>
 	<h3>Gunnar Martin - CS290 - Winter 2015</h3>
 	<h3>Assignment: DB Interactions</h3>
 	{{{body}}}
+	<script src="helper.js"></script>
 </body>
 </html>
