--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -20,7 +20,9 @@
 			<td><input type="number" name="weight"></td>
 			<td><input type="date" name="date"></td>
 			<td><input type="number" name="lbs" min="0" max="1"></td>
-			<td colspan="2"><button id="addButton" type="button">ADD!</button></td>
+			<td colspan="2">
+				<button id="addButton" type="button">ADD!</button>
+			</td>
 		</form>
 	</tr>
 	
