--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -21,7 +21,7 @@
 			<td><input type="date" name="date"></td>
 			<td><input type="number" name="lbs" min="0" max="1"></td>
 			<td colspan="2">
-				<button id="addButton" type="button">ADD!</button>
+				<button id="addButton" type="button" onclick="addClick()">(ADD!)</button>
 			</td>
 		</form>
 	</tr>
