--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -20,9 +20,12 @@
 			<td><input id="input_weight" type="number" name="weight"></td>
 			<td><input id="input_date" type="date" name="date"></td>
 			<td><input id="input_lbs" type="number" name="lbs" min="0" max="1"></td>
-			<td colspan="2">
+			
+			<td colspan="2"><input type="submit" value="Add Row" onclick="addClick()"/></td>
+			
+			<!-- <td colspan="2">
 				<button id="addButton" type="button" onclick="addClick()">(ADD!)</button>
-			</td>
+			</td> -->
 		</form>
 	</tr>
 	
