--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -14,18 +14,17 @@
 	
 	<!-- ADD NEW DATA ROW -->
 	<tr>
-		<form action="/addrow2" method="get">
+		<form action="" method="get">
 			<td><input id="input_name" type="text" name="name" required></td>
 			<td><input id="input_reps" type="number" name="reps"></td>
 			<td><input id="input_weight" type="number" name="weight"></td>
 			<td><input id="input_date" type="date" name="date"></td>
 			<td><input id="input_lbs" type="number" name="lbs" min="0" max="1"></td>
 			
-			<td colspan="2"><input type="submit" value="Add Row" onclick="addClick()"/></td>
-			
-			<!-- <td colspan="2">
-				<button id="addButton" type="button" onclick="addClick()">(ADD!)</button>
-			</td> -->
+			<td colspan="2">
+				<input type="submit" value="Add Row" onclick="addClick()"/>
+				<!-- <button id="addButton" type="button" onclick="addClick()">(ADD!)</button> -->
+			</td>
 		</form>
 	</tr>
 	
