--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -14,7 +14,7 @@
 	
 	<!-- ADD NEW DATA ROW -->
 	<tr>
-		<form action="/addrow2" method="get">
+		<form action="/empty" method="get">
 			<td><input id="input_name" type="text" name="name" required></td>
 			<td><input id="input_reps" type="number" name="reps"></td>
 			<td><input id="input_weight" type="number" name="weight"></td>
