--- a/views/form2.handlebars
+++ b/views/form2.handlebars
@@ -14,7 +14,8 @@
 	
 	<!-- ADD NEW DATA ROW -->
 	<tr>
-		<form action="/empty" method="get">
+		<!-- <form action="/empty" method="get"> -->
+		<form>
 			<td><input id="input_name" type="text" name="name" required></td>
 			<td><input id="input_reps" type="number" name="reps"></td>
 			<td><input id="input_weight" type="number" name="weight"></td>
@@ -22,7 +23,7 @@
 			<td><input id="input_lbs" type="number" name="lbs" min="0" max="1"></td>
 			
 			<td colspan="2">
-				<input type="submit" value="Add Row" onclick="addClick()"/>
+				<input type="submit" value="Add Row"/>
 				<!-- <button id="addButton" type="button" onclick="addClick()">(ADD!)</button> -->
 			</td>
 		</form>
